make final updates (hopefully)

--- a/paper/News-Classification.tex
+++ b/paper/News-Classification.tex
@@ -20,7 +20,7 @@
 	
 	\newpage
 	
-	\abstract{By many reports, there has been an increase in skepticism and polarity in news consumption. Since 2016, we have even heard the president of the United States make accusations of mainstream news sources publishing ``fake news''. With a goal of classifying articles by their news source, I scraped several thousand political news articles from Fox, Vox, and PBS News. I then train a bidirectional LSTM netural network to classify the source of the article based on the text and find that it can accurately predict the correct source. Finally, I develop a simple web application that utilizes the trained network and discuss the social implications of such a tool.}
+	\abstract{By many reports, there has been an increase in skepticism and polarity in news consumption. Since 2016, we have even heard the president of the United States make accusations of traditionally mainstream news sources publishing ``fake news''. With a goal of classifying news articles by their source, I scraped several thousand political news articles from Fox, Vox, and PBS News. I then trained a bidirectional LSTM netural network to classify the source of the article based on the text. Accuracy was measured by calculating the F1 score, on which the best model scored a 0.946 on the out of sample classification task. To interact with this tool, I developed a web application that implements the trained network. Finally, I considered the social implications of such a tool.}
 		
 	\newpage
 	
@@ -36,7 +36,7 @@
 		\textit{``If you can't measure it, you can't improve it.''}
 	\end{center}
 	\begin{flushright}
-		--- Peter Drucker
+		--- Lord Kelvin\footnote{The actual source of this quote is hard to pin down. While some attribute the quote to Lord Kelvin, others attribute it to Peter Drucker. A comment on stackoverflow further suggests that Antoine-Augustin Cournot was actually the first to express it in concise form in ``De l'origine et des limites de la correspondance entre l'algebre et la geometrie'' in 1847.}
 	\end{flushright}
 
 	\vspace{2\baselineskip}
@@ -47,17 +47,23 @@
 		
 		Since then, many social media companies and other institutions have begun public campaigns to combat the perceived threat from fake news, including explicit efforts from Google and Facebook to remove ``fake news sites'', as documented in \citet{allcott2017social}. 
 		
-		With a goal of classifying articles by their news source, I scraped several thousand news articles from Fox, Vox, and PBS News. By some estimations,\footnote{The website https://www.adfontesmedia.com/ provides a visual representation of media bias. Their methodology is well documented, and the outcome is largely consistent with other sources and anecdotal descriptions of bias.} these three news sites represent distinct categories of news: Fox as a conservative “right” opinion; Vox as a liberal “left” opinion; and PBS as the “center” primary source news position. Figure \ref{fig:news-bias} shows a graphic representation of this news bias. 
+		While the ``fake news'' problem is often referenced, a full solution may not actually exist. In some cases, such as verifying the number of senators who voted in favor of a bill, real-time verification could prove possible by cross-referencing reputable data sources. However, for other types of news, finding this ground truth may not be obvious at all, and in fact the ``truth'' might  depend more on the framing of the facts, than on the facts themselves. 
 		
-		I first calculate the top words, 2-gram, and 3-gram frequencies to better understand the dataset, and then train a bidirectional, long-term short-term memory (LSTM) recurrent neural network using the GloVe pretrained word embeddings to predict the source of news. 
+		To exemplify this motivation, suppose there are two different news stories that are both reporting on a hypothetical president's connection to a foreign leader of a non-allied country. Suppose further that both sources report the (true) fact that evidence exists of a long phone call between the two. However, one source claims that this call occurred at an inappropriate time, politically, and that it could send a signal of collusion to the international community and harm our country's credibility. The other source claims that this call was necessary because of the challenges and uncertainty we face in the international arena, and that the president is just working to grow strong relationships with other world leaders for our future benefit. Are either of these sources objectively wrong? Is either of them ``fake news''? It's hard to say. What can be said more confidently is that, no matter their inherent level of truth, they are both selling a different message, with a different bias, about the same topic. So, putting aside the question of distinguishing real from fake news, if we can use a computer to identify the most likely source of a given piece of news, we may still be able to improve on one's ability to understand and contextualize news. 
 		
-		In this case, I find that a relatively simple, bidirectional, LSTM recurrent neural network can in fact correctly predict the source of an article with very high accuracy. I then use the result of this trained network to build a web app that can allow for a copy-and-paste interface to this classification model. Depending on the extent to which the underlying model enables transfer learning, this web app could ideally serve as a first check on the inherent bias in political news before you read. 
+		Thus, with a goal of classifying articles by their news source, I scraped several thousand news articles from Fox, Vox, and PBS News. By some estimations,\footnote{The website https://www.adfontesmedia.com/ provides a visual representation of media bias. Their methodology is well documented, and the outcome is largely consistent with other sources and anecdotal descriptions of bias.} these three news sites represent distinct categories of news: Fox as a conservative “right” opinion; Vox as a liberal “left” opinion; and PBS as a “center” primary source of news. Figure \ref{fig:news-bias} shows a graphic representation of this bias. 
 		
-		\subsection{Literature Review}
+		I first calculated the top words, 2-gram, and 3-gram frequencies to better understand the dataset, and then trained a bidirectional, long-term short-term memory (LSTM) recurrent neural network using the GloVe pretrained word embeddings to predict the source of news. 
 		
-		This work fits into existing literature by bridging gaps between the cutting edge of computer science and economics. On the computer science front, bidirectional LSTM recurrent neural networks provide some of the most accurate results for predicting sequential data. The LSTM architecture was introduced in \citet{hochreiter1997long}, extending the Recurrant Neural Network (RNN) to improve lagged information storage for the purpose of predicting sequential data. More recently, \citet{gers2000recurrent}, \citet{chung2014empirical}, and \citet{yao2015depth} introduce variations on the baseline \citet{hochreiter1997long} LSTM model, although \citet{greff2016lstm} show them all to be roughly equivalent on a variety of prediction tasks. 
+		In this case, I found that a relatively simple, bidirectional, LSTM recurrent neural network can correctly predict the source of an article with high accuracy. I then used the result of this trained network to build a web app that can allow for a copy-and-paste interface to interact with this classification model. Depending on the extent to which the underlying model enables transfer learning, this web app could ideally lead to various measurements of the inherent bias in a given political news article.  
 		
-		\citet{schuster1997bidirectional} introduced the first bidirectional RNN reporting a significant predictive improvements over traditional RNNs. Together, bidirectional LSTM architectures prove to be among the most accurate models for language tasks, consistent with \citet{wang2015unified}. 
+		\section{Literature Review}
+		
+		This work fits into existing literature by bridging gaps between the cutting edge of computer science and economics. On the computer science front, much of the related work has focused on classifying news as ``real'' or ``fake''. \citet{volkova2017separating} built predictive models to categorize news as either verified or suspicious. Further, they labeled each suspicious news document as either a satire, hoax, clickbait, or propaganda. Similarly, \citet{wang2017liar} both released a new dataset to the public, and provided an empirical analysis that incorporated meta-data with the article text to improve classification results. Further, \citet{shu2017fake} provided a comprehensive survey of efforts to classify real news from fake news on social media. However, as described in the introduction, the goal of this work is not to classify news along the lines of real or fake, but rather to classify news based on the source. To the best of my knowledge, this work is the first to explore this specific problem. 
+		
+		To answer the question of identifying the source of a news article given its text, I employed tools from a branch of the machine learning and neural network literature that focuses on sequential data. Bidirectional long-term short-term memory (LSTM) recurrent neural networks provide some of the most accurate results for these tasks. The LSTM architecture was introduced in \citet{hochreiter1997long}, and extended the Recurrant Neural Network (RNN) to improve lagged information storage for the purpose of predicting sequential data. More recently, \citet{gers2000recurrent}, \citet{chung2014empirical}, and \citet{yao2015depth} introduced variations on the baseline \citet{hochreiter1997long} LSTM model, although \citet{greff2016lstm} showed them all to be roughly equivalent on a variety of prediction tasks. 
+		
+		Moreover, \citet{schuster1997bidirectional} introduced the first bidirectional RNN, which includes both a forward and backward layer to provide additional context for a given input value. This innovation reported significant predictive improvements over traditional RNNs. Together, bidirectional layers and LSTM architectures have proven to be yield the most accurate models for language tasks, consistent with the findings in \citet{wang2015unified}. 
 		
 		The economic work on media bias focuses more on inference based analyses. In particular, \citet{gentzkow2010drives} find that readers prefer to consume ``like-minded'' news---meaning they want to have their prior beliefs validated---and that the profit maximizing response from news companies can account for around 20\% of the variation in political slant or bias. In this same direction, \citet{gentzkow2006media} also find that a theoretical Bayesian consumer will effectively reinforce their beliefs of a given news source quality when they read something that confirms their priors. Together, these works suggest that political news bias may be a tactical response of competing news firms to segment the consumer market according to their heterogeneous beliefs, and, further, that this polarization may be self-reinforcing. In fact, \citet{gentzkow2008competition} go as far as to suggest that competition in information markets may actually be counterproductive in achieving balanced and unbiased news. These effects could explain the relative neutrality of news sources like the BBC that are somewhat insulated from the competitive pressures faced by Fox and Vox news companies. 
 		
@@ -106,7 +112,7 @@
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	% LSTM MODELS
 	    	
-	\section{LSTM Models}
+	\section{Neural Networks}
 	As a baseline, I use long-term short-term memory (LSTM) neural network. The LSTM architecture was introduced in \citet{hochreiter1997long}, and extended the Recurrant Neural Network (RNN) to improve lagged information storage for the purpose of predicting sequential data. The key advantage of the recurrent LSTM architecture is the ability for the cell to ``remember'' relevant lagged values, while ``forgetting'' less useful ones. Visually, we can see a representation of a single LSTM unit in Figure \ref{fig:lstm}.\footnote{Source: https://colah.github.io/posts/2015-08-Understanding-LSTMs}
 	
 	\begin{figure}[H]
@@ -115,7 +121,7 @@
 		\label{fig:lstm}
 	\end{figure}
 
-	More recently, \citet{gers2000recurrent}, \citet{chung2014empirical}, and \citet{yao2015depth} introduce variations on the baseline \citet{hochreiter1997long} LSTM model, although \citet{greff2016lstm} show them to be roughly equivalent. 
+	More recently, \citet{gers2000recurrent}, \citet{chung2014empirical}, and \citet{yao2015depth} introduced variations on the baseline \citet{hochreiter1997long} LSTM model, although \citet{greff2016lstm} show them to be roughly equivalent. 
 	
 	Much success in natural language processing (and other sequential tasks) has been attributed to so-called bidirectional LSTM networks. As in \citet{wang2015unified}, I train an LSTM architecture bidirectionally (i.e. forwards and backwards), and compare it to a unidirectional (i.e. forward-only) baseline. Intuitively, we can think of bidirectional feeds as providing additional context for a given word to ``know'' about what came before it \textit{and} what comes after it. Visually, Figure \ref{fig:bidirectional} depicts a bidirectional network during training. 
 	 
@@ -161,7 +167,7 @@
 	
 	\section{Implementation}
 	
-	To make use of this trained model in application, I wrote a simple web interface that enables passing text from an arbitrary news article through a form, and returns values that can be interpreted as predictions of the likelihood that a given article is from Fox, Vox, or PBS News. The commercial use case for this type of app is to provide context as to the type of writing, either before or after the consumer has read the article. Ideally, each user could login and see a history of the news they consume---this could help interested readers identify if and when they are in a political bubble or echo-chamber. Idealistically, it could help balance information consumption. 
+	To make use of this trained model in application, I wrote a web interface that enables passing text from an arbitrary news article through a form, and returns values that can be interpreted as predictions of the likelihood that a given article is from Fox, Vox, or PBS News. The commercial use case for this type of app is to provide context as to the type of writing, either before or after the consumer has read the article. Ideally, each user could login and see a history of the news they consume---this could help interested readers identify if and when they are in a political bubble or echo-chamber. Idealistically, it could help balance information consumption. 
 	
 	Extensions of this work would include more volume and more recent news articles as to stay current with changing topics and trends. Additional news sources would also be desirable for readers to chose their set of comparisons such that they are comfortable in assessing the relative balance and neutrality of the set as a whole. 
 	
@@ -184,9 +190,9 @@
 	% CONCLUSION
 		
 	\section{Conclusion and Discussion}
-	I've shown that a neural network can accurately classify news articles based on language differences in the underlying news sources. These results have implications for our politically polarized world, where even scientific ``facts'' are now often disputed. While there are plenty of factors that could motivate news companies to intentionally bias their news,  \citet{gentzkow2008competition} and \citet{gentzkow2006media} suggest that the profit maximizing response of a company is to produce a news product that confirms consumers prior beliefs. Thus, given a society of individuals with heterogeneous preferences and beliefs, and a competitive news information market, it seems unlikely that biased news (or even fake news) will disappear anytime soon. 
+	I've shown that a neural network can, in many cases, accurately classify news articles based on language differences inherent to the underlying news sources. These results have implications for our politically polarized world, where even scientific ``facts'' are often disputed. While there are plenty of factors that could motivate news companies to intentionally bias their news,  \citet{gentzkow2008competition} and \citet{gentzkow2006media} suggest that the profit maximizing response of a company is to produce a news product that confirms consumers prior beliefs. Thus, given a society of individuals with heterogeneous preferences and beliefs, and a competitive news information market, it seems unlikely that biased news (or even fake news) will disappear anytime soon. 
 	
-	A software application based on the ideas presented above could serve as a starting point to measure news consumption---much in the same way that calendars can help to measure our time use, nutrition apps measure our consumption of macronutrients, and GPS measures our geographical position. 
+	There is good news. A software application based on the ideas presented above could serve as a starting point to measure this bias in our news consumption---much in the same way that calendars can help to measure our time use, nutrition apps measure our consumption of macronutrients, and GPS measures our geographical position. 
 	
 	\newpage
 	
