--- a/paper/references/ref.bib
+++ b/paper/references/ref.bib
@@ -165,3 +165,38 @@
 	year={2013},
 	publisher={Taylor \& Francis}
 }
+
+@inproceedings{volkova2017separating,
+	title={Separating facts from fiction: Linguistic models to classify suspicious and trusted news posts on twitter},
+	author={Volkova, Svitlana and Shaffer, Kyle and Jang, Jin Yea and Hodas, Nathan},
+	booktitle={Proceedings of the 55th Annual Meeting of the Association for Computational Linguistics (Volume 2: Short Papers)},
+	pages={647--653},
+	year={2017}
+}
+
+@article{wang2017liar,
+	title={" liar, liar pants on fire": A new benchmark dataset for fake news detection},
+	author={Wang, William Yang},
+	journal={arXiv preprint arXiv:1705.00648},
+	year={2017}
+}
+
+@inproceedings{park2017deep,
+	title={Deep Neural Networks for News Recommendations},
+	author={Park, Keunchan and Lee, Jisoo and Choi, Jaeho},
+	booktitle={Proceedings of the 2017 ACM on Conference on Information and Knowledge Management},
+	pages={2255--2258},
+	year={2017},
+	organization={ACM}
+}
+
+@article{shu2017fake,
+	title={Fake news detection on social media: A data mining perspective},
+	author={Shu, Kai and Sliva, Amy and Wang, Suhang and Tang, Jiliang and Liu, Huan},
+	journal={ACM SIGKDD Explorations Newsletter},
+	volume={19},
+	number={1},
+	pages={22--36},
+	year={2017},
+	publisher={ACM}
+}
